Update index.css fix bottom scrollbar

--- a/index.css
+++ b/index.css
@@ -917,12 +917,6 @@ footer{
     opacity: 0; 
     transition: all 1s ease;
 }
-.reveal_2{ 
-    position: relative; 
-    transform: translateY(150px); 
-    opacity: 0; 
-    transition: all 1s ease;
-}
 .reveal.active{ 
     transform: translateY(0px);
     opacity: 1;
